--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <body>
     <div id="root" style="display: none;"></div>
 
-    <div id="scaler-container" class="flex flex-col items-center justify-between text-center select-none py-10 px-6 bg-white">
+    <div id="scaler-container" class="flex flex-col items-center justify-between text-center select-none pt-10 pb-4 bg-white">
         
       <div class="flex-1 flex flex-col items-center justify-center w-full gap-12">
         
